--- a/eCommerceSite-PHP/composer.json
+++ b/eCommerceSite-PHP/composer.json
@@ -1,6 +1,7 @@
 {
     "license": "MIT",
     "require": {
-        "phpmailer/phpmailer": "^6.8"
+        "phpmailer/phpmailer": "^6.8",
+        "orhanerday/open-ai": "^4.7"
     }
 }
